@@ -5,9 +5,16 @@
   A B
 a 1 0
 b 0 2
+> add.data.matrix(x, cbind(B=c(a=3)))
+  A B
+a 1 3
+> add.data.matrix(x, cbind(B=c(a=3)), clear.dim=1)
+  A B
+a 0 3
 > x
   A
 a 1
+>
 > # side-effects form
 > add.data.matrix('x', cbind(B=c(b=2)))
 > x
@@ -56,6 +63,14 @@ a 1
   A B
 a 1 0
 b 0 2
+> add.data.Matrix(x, cbind(B=c(a=3)))
+1 x 2 Matrix of class "dgeMatrix"
+  A B
+a 1 3
+> add.data.Matrix(x, cbind(B=c(a=3)), clear.dim=T)
+1 x 2 Matrix of class "dgeMatrix"
+  A B
+a 0 3
 > x
 1 x 1 Matrix of class "dtrMatrix"
   A
